[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/theme.tres" type="Theme" id=1]
[ext_resource path="res://src/main/session_setup/MatchScreen.gd" type="Script" id=2]
[ext_resource path="res://src/ui/MyButton.gd" type="Script" id=3]
[ext_resource path="res://src/ui/OptionSwitcher.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/fonts/monogram_small.tres" type="DynamicFont" id=5]

[node name="MatchScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -1.0
margin_right = 3.0
margin_bottom = -1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -455.5
margin_top = -227.0
margin_right = 455.5
margin_bottom = 227.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 6.93966
margin_top = 5.49302
margin_right = 904.189
margin_bottom = 447.96
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="OptionSwitcher" parent="PanelContainer/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_right = 897.0
margin_bottom = 66.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 897.0
margin_bottom = 442.0
size_flags_vertical = 3
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="CreatePanel" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 872.0
margin_bottom = 341.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/CreatePanel"]
margin_right = 847.0
margin_bottom = 29.0
size_flags_vertical = 2
custom_fonts/font = ExtResource( 5 )
text = "Get a private match ID and send it to your friends."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateButton" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer/CreatePanel"]
margin_left = 323.0
margin_top = 251.0
margin_right = 523.0
margin_bottom = 316.534
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
text = "Create"
script = ExtResource( 3 )

[node name="JoinPanel" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer"]
visible = false
margin_left = 25.0
margin_top = 25.0
margin_right = 872.0
margin_bottom = 341.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/JoinPanel"]
margin_right = 847.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 75 )
custom_fonts/font = ExtResource( 5 )
text = "Paste the private match ID that your friend sent you."
align = 1

[node name="Fields" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer/JoinPanel"]
margin_top = 79.0
margin_right = 847.0
margin_bottom = 144.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/JoinPanel/Fields"]
margin_top = 7.0
margin_right = 216.0
margin_bottom = 58.0
text = "Match ID:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/MarginContainer/JoinPanel/Fields"]
margin_left = 220.0
margin_right = 711.0
margin_bottom = 65.0
focus_neighbour_bottom = NodePath("../PasteButton")
focus_next = NodePath("../PasteButton")
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasteButton" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer/JoinPanel/Fields"]
margin_left = 715.0
margin_right = 847.324
margin_bottom = 65.5339
focus_neighbour_top = NodePath("../LineEdit")
focus_previous = NodePath("../LineEdit")
text = "Paste"
script = ExtResource( 3 )

[node name="Spacer" type="Control" parent="PanelContainer/VBoxContainer/MarginContainer/JoinPanel"]
margin_top = 148.0
margin_right = 847.0
margin_bottom = 247.0
size_flags_vertical = 3

[node name="JoinButton" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer/JoinPanel"]
margin_left = 323.0
margin_top = 251.0
margin_right = 523.0
margin_bottom = 316.534
rect_min_size = Vector2( 200, 0 )
focus_neighbour_top = NodePath("../Fields/PasteButton")
focus_previous = NodePath("../Fields/PasteButton")
size_flags_horizontal = 4
text = "Join"
script = ExtResource( 3 )

[node name="MatchPanel" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer"]
visible = false
margin_left = 25.0
margin_top = 25.0
margin_right = 872.0
margin_bottom = 341.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/MatchPanel"]
margin_left = 23.0
margin_top = -1.0
margin_right = 823.0
margin_bottom = 124.0
rect_min_size = Vector2( 800, 125 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 5 )
text = "There is matchmaking, but this is a tiny indie game. Don't expect to find randos to battle! It's super cheap - buy a couple copies for your friends!"
autowrap = true

[node name="Fields" type="GridContainer" parent="PanelContainer/VBoxContainer/MarginContainer/MatchPanel"]
margin_top = 129.0
margin_right = 847.0
margin_bottom = 247.0
size_flags_vertical = 3
columns = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/MatchPanel/Fields"]
margin_top = 7.0
margin_right = 421.0
margin_bottom = 58.0
size_flags_horizontal = 3
text = "Find at least"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerCount" parent="PanelContainer/VBoxContainer/MarginContainer/MatchPanel/Fields" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_left = 425.0
margin_right = 846.0
margin_bottom = 66.0
size_flags_horizontal = 3

[node name="MatchButton" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer/MatchPanel"]
margin_left = 323.0
margin_top = 251.0
margin_right = 523.0
margin_bottom = 316.534
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
text = "Match"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="PanelContainer/VBoxContainer/OptionSwitcher" to="." method="_on_OptionSwitcher_item_selected"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer/JoinPanel/Fields/PasteButton" to="." method="_on_PasteButton_pressed"]
